--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,4 @@
+// FIX FOR FLOATS
 @mixin clearfix {
   &::after {
     content: '';
@@ -6,9 +7,47 @@
   }
 }
 
+// CENTER ABS POSITIONED ELEMENTS
 @mixin absCenter {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+// MEDIA QUERY MANAGER
+/*
+
+0 - 600px          Phone
+600px - 900px      Tablet(portrait)
+900px - 1200px     Tablet(landscape)
+[1200px - 1800px]  Desktop *(Default as is this desktop first approach)
+1800px +           Desktop(Very Large)
+
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 37.5em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-port {
+    @media only screen and (max-width: 56.25em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-land {
+    @media only screen and (max-width: 75em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == big-desktop {
+    @media only screen and (min-width: 112.5em) {
+      @content;
+    }
+  }
 }
