--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,10 +8,28 @@
 
 /* This is done so that it can be changed in media queries and all the rem values will update by the same amount */
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem = 10px = 62.5%
+
+  // media queries
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
 }
 
 body {
   box-sizing: border-box;
   padding: 3rem;
+
+  // media queries
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
