--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -4,100 +4,100 @@
   }
 
   &__input {
-    display: block;
-
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: inherit;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
     background-color: rgba($color-white, 0.5);
     border: none;
-    border-bottom: 3px solid transparent; // this is to stop the bottom element from moving due to the extra 3px being added
-    border-radius: 2px;
-    color: inherit;
-    font-family: inherit;
-    font-size: 1.5rem;
-    padding: 1.5rem 2rem;
-    transition: all 0.3s;
+    border-bottom: 3px solid transparent;
     width: 90%;
+    display: block;
+    transition: all 0.3s;
 
-    &::placeholder {
-      color: $color-grey-dark-2;
+    @include respond(tab-port) {
+      width: 100%;
     }
 
     &:focus {
       outline: none;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
       border-bottom: 3px solid $color-primary;
-      box-shadow: 01 rem 2rem rgba($color-black, 0.1);
     }
 
     &:focus:invalid {
       border-bottom: 3px solid $color-secondary-dark;
     }
+
+    &::-webkit-input-placeholder {
+      color: $color-grey-dark-2;
+    }
   }
 
   &__label {
-    display: block;
-
     font-size: 1.2rem;
     font-weight: 700;
-    margin: 0.7rem 0 0 2rem;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
     transition: all 0.3s;
   }
 
-  // this is for that nice animation between the label and the placeholder
   &__input:placeholder-shown + &__label {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
   }
 
-  // radio buttons
   &__radio-group {
+    width: 49%;
     display: inline-block;
 
-    width: 49%;
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
-  &__radio-label {
-    position: relative;
-
-    cursor: pointer;
-    font-size: $default-font-size;
-    padding-left: 4.5rem;
-  }
-
-  // for hiding the original radio buttons
   &__radio-input {
     display: none;
   }
 
-  &__radio-button {
-    display: inline-block;
-    position: absolute;
-    top: -0.4rem;
-    left: 0;
+  &__radio-label {
+    font-size: $default-font-size;
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
 
-    border: 5px solid $color-primary;
-    border-radius: 50%;
+  &__radio-button {
     height: 3rem;
     width: 3rem;
+    border: 5px solid $color-primary;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: -0.4rem;
 
     &::after {
+      content: '';
       display: block;
+      height: 1.3rem;
+      width: 1.3rem;
+      border-radius: 50%;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-
       background-color: $color-primary;
-      border-radius: 50%;
-      content: '';
-      height: 1.3rem;
       opacity: 0;
       transition: opacity 0.2s;
-      width: 1.3rem;
     }
   }
 
-  // for syncing the custom inputs with the actual radio inputs checked status
-  &__radio-input:checked ~ &__radio-label &__radio-button:after {
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
 }
