--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,96 +1,94 @@
 .popup {
+  height: 100vh;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-
   background-color: rgba($color-black, 0.8);
-  height: 100vh;
+  z-index: 9999;
   opacity: 0;
-  transition: all 0.3s;
   visibility: hidden;
-  width: 100%;
-  z-index: 4000;
+  transition: all 0.3s;
+
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include absCenter;
 
-    display: table;
-
-    background-color: $color-white;
-    border-radius: 3px;
-    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
-    color: $color-black;
-    opacity: 0;
-    overflow: hidden;
-    transform: translate(-50%, -50%) scale(0.25);
-    transition: all 0.3s;
     width: 75%;
+    background-color: $color-white;
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
-  // left block
   &__left {
-    display: table-cell;
-
     width: 33.333333%;
+    display: table-cell;
+  }
+
+  &__right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
   }
 
   &__img {
     display: block;
-
     width: 100%;
   }
 
-  // right block
-  &__right {
-    display: table-cell;
-    vertical-align: middle;
-
-    padding: 3rem 5rem;
-    width: 66.666667%;
-  }
-
   &__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+
     -moz-column-count: 2;
-    column-count: 2;
-    -moz-column-gap: 4rem;
-    column-gap: 4rem;
+    -moz-column-gap: 4rem; //1em = 14px;
     -moz-column-rule: 1px solid $color-grey-light-2;
+
+    column-count: 2;
+    column-gap: 4rem; //1em = 14px;
     column-rule: 1px solid $color-grey-light-2;
 
-    font-size: 1.4rem;
-    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
     -ms-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
-    margin-bottom: 4rem;
   }
 
-  // target for the modal
-  // Open states
+  //Open states
   &:target {
     opacity: 1;
     visibility: visible;
   }
 
-  // for making it seem like the modal is appearing towards the user
   &:target &__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
   }
 
-  // close button for modal
   &__close {
     &:link,
     &:visited {
-      display: inline-block;
+      color: $color-grey-dark;
       position: absolute;
       top: 2.5rem;
       right: 2.5rem;
-
-      color: $color-grey-dark;
       font-size: 3rem;
-      line-height: 1;
       text-decoration: none;
+      display: inline-block;
       transition: all 0.2s;
+      line-height: 1;
     }
 
     &:hover {
