--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,36 +1,59 @@
 .story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
   background-color: rgba($color-white, 0.6);
   border-radius: 3px;
-  box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  font-size: $default-font-size;
-  margin: 0 auto;
   padding: 6rem;
   padding-left: 9rem;
+  font-size: $default-font-size;
   transform: skewX(-12deg);
-  width: 75%;
+
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
 
   &__shape {
-    float: left;
-
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
-    height: 15rem;
-    position: relative;
-    shape-outside: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
     width: 15rem;
+    height: 15rem;
+    float: left;
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      border-radius: none;
+    }
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
-    //^ when ever something strange happens with animations and things, this backface property will usually fix it
-    backface-visibility: hidden;
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
     transition: all 0.5s;
   }
 
   &__text {
     transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
@@ -38,14 +61,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, 20%);
-
-    backface-visibility: hidden;
     color: $color-white;
-    font-size: 1.7rem;
-    opacity: 0;
-    text-align: center;
     text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
     transition: all 0.5s;
+    backface-visibility: hidden;
   }
 
   &:hover &__caption {
@@ -54,7 +76,7 @@
   }
 
   &:hover &__img {
-    filter: blur(3px) brightness(80%);
     transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
   }
 }
