--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   padding: 10rem 0;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -19,6 +27,11 @@
 
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
+
+    @include respond(tab-port) {
+      text-align: center;
+      width: 100%;
+    }
   }
 
   &__list {
@@ -59,5 +72,11 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     width: 80%;
+
+    @include respond(tab-port) {
+      float: none;
+
+      width: 100%;
+    }
   }
 }
