--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -16,6 +16,16 @@
     text-align: center;
     width: 7rem;
     z-index: 2000;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond(phone) {
+      top: 3rem;
+      right: 3rem;
+    }
   }
 
   &__background {
@@ -29,6 +39,16 @@
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     width: 6rem;
     z-index: 30;
+
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    @include respond(phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
   }
 
   &__nav {
