add @support for browser support

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,7 +12,9 @@
   height: 95vh;
   position: relative;
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125rem) {
+  @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-resolution: 192dpi) and (min-width: 37.5em),
+    (min-width: 125rem) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
