--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,4 +32,9 @@ body {
   @include respond(tab-port) {
     padding: 0;
   }
+
+  ::selection {
+    color: $color-white;
+    background-color: $color-primary;
+  }
 }
